tests/std/negative/test/AssertNotEqualRejectsMixedTypesTest.terl
module std.test.Test.AssertNotEqualRejectsMixedTypesTest.

@test
pub assert_not_equal_rejects_mixed_types(): Bool ->
    std.test.Test.assert_not_equal(42, "forty-two").
